Fixed #796 - quiz question text not wrapping in edge browser

--- a/modules/xerte/parent_templates/Nottingham/models_html5/quiz.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/quiz.css
@@ -73,3 +73,6 @@
 		padding-top: 1em;
 	}
 
+	#qTxt {
+		width: 100%;
+	}
